...
                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Login" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gaa-49-b3b">
                                    <rect key="frame" x="170" y="91" width="74" height="37"/>
                                    <accessibility key="accessibilityConfiguration" identifier="loginViewTitle">
                                        <accessibilityTraits key="traits" staticText="YES"/>
                                    </accessibility>
...
                            <tableViewSection id="HAo-HJ-pru" userLabel="Section">
                                <cells>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="username" id="k2A-rn-eLF" userLabel="Username row">
                                        <rect key="frame" x="0.0" y="237" width="414" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
...
                                                    <color key="textColor" red="0.40000000600000002" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                    <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="next"/>
                                                    <connections>
                                                        <outlet property="delegate" destination="pXg-aW-eMb" id="Zve-VS-KQT"/>
...
                                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                    </tableViewCell>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="password" id="Lfj-Jo-mnp" userLabel="Password row">
                                        <rect key="frame" x="0.0" y="281" width="414" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
...
                                                    <color key="textColor" red="0.40000000600000002" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                    <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="done" secureTextEntry="YES"/>
                                                    <connections>
                                                        <outlet property="delegate" destination="pXg-aW-eMb" id="gVK-fD-prA"/>
...
                                                    <rect key="frame" x="20" y="0.0" width="374" height="44"/>
                                                    <color key="backgroundColor" red="0.40000000600000002" green="1" blue="0.80000001190000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="login"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="64" id="dr4-TG-fA2"/>
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Authenticated" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b8u-Rl-
                                        <rect key="frame" x="93" y="0.0" width="188" height="404"/>
                                        <accessibility key="accessibilityConfiguration" identifier="authenticatedViewTitle"/>
                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
